<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.fragment.app.FragmentContainerView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    tools:context=".MapsActivity">
</androidx.fragment.app.FragmentContainerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/portalButton6"
        android:layout_width="92dp"
        android:layout_height="132dp"
        android:layout_gravity="bottom|center"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/friends"
        android:translationX="0dp"
        android:translationY="-250dp"
        android:visibility="invisible"
        app:fabCustomSize="92dp"
        app:maxImageSize="65dp"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/portalButton5"
        android:layout_width="92dp"
        android:layout_height="132dp"
        android:layout_gravity="bottom|center"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/cog"
        android:translationX="100dp"
        android:translationY="-200dp"
        android:visibility="invisible"
        app:fabCustomSize="92dp"
        app:maxImageSize="65dp"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/portalButton4"
        android:layout_width="92dp"
        android:layout_height="132dp"
        android:layout_gravity="bottom|center"
        android:clickable="true"
        android:focusable="true"
        android:translationX="-100dp"
        android:translationY="-200dp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/portalButton3"
        android:layout_width="92dp"
        android:layout_height="132dp"
        android:layout_gravity="bottom|center"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/globe"
        app:fabCustomSize="92dp"
        app:maxImageSize="65dp"
        android:translationX="100dp"
        android:translationY="-100dp"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/portalButton2"
        app:fabCustomSize="92dp"
        app:maxImageSize="65dp"
        android:layout_width="92dp"
        android:layout_height="132dp"
        android:layout_gravity="bottom|center"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/pluscircle"
        android:translationX="0dp"
        android:translationY="-150dp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/portalButton1"
        android:layout_width="92dp"
        android:layout_height="132dp"
        android:layout_gravity="bottom|center"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/profile"
        android:translationX="-100dp"

        android:translationY="-100dp"
        android:visibility="invisible"
        app:fabCustomSize="92dp"
        app:maxImageSize="65dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="top|end"
        android:background="#FFFFFF"
        android:text="@string/textBoxMapTest"
        android:visibility="invisible"
        tools:text="@string/textBoxMapTest" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/portalButton"
        android:layout_width="92dp"
        android:layout_height="132dp"
        android:layout_gravity="bottom|center|center_vertical"
        android:clickable="true"
        android:contentDescription="@string/opens_the_portal_overlay"
        android:translationY="-10dp"
        app:backgroundTint="#F44336"
        android:focusable="true" />

</FrameLayout>