<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingScreenId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_creation"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Setting Screen"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />





    <ScrollView
        android:layout_width="412dp"
        android:layout_height="598dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/darkmodeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:text="Toggle Maps Darkmode:"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.035" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#30ffffff"
                android:orientation="horizontal"
                android:weightSum="100">


                <Button
                    android:id="@+id/darkModeButton"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="34"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="#000000"
                    android:clickable="true"
                    android:text="DarkMode"
                    android:textColor="@color/white"
                    android:visibility="visible" />


            </LinearLayout>

            <TextView
                android:id="@+id/FirstTitleofLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:text="Remove Friend:"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.035" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="#30ffffff"
                android:weightSum="100">


                <EditText
                    android:id="@+id/textViewRemoveFriend"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_weight="65"
                    android:gravity="center"
                    android:text="User: "
                    android:textColor="@color/white"
                    android:textAlignment="center" />

                <Button
                    android:clickable="true"
                    android:layout_gravity="right"
                    android:background="@drawable/roundstyle"
                    android:id="@+id/removeFriendButton"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="34"
                    android:visibility="visible"
                    android:backgroundTint="#C8102E"
                    android:text="Remove"
                    android:textColor="@color/white" />


            </LinearLayout>

            <TextView
                android:id="@+id/Illhavetonamethis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:text="Leader Board Control"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.035" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#30ffffff"
                android:orientation="horizontal"
                android:weightSum="100">


                <TextView
                    android:id="@+id/textViewRemoveSelffromLeaderBoard"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_weight="65"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="Do you wish to be on the leaderboard?"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/buttonRemoveSelfFromLeaderBoard"
                    android:layout_width="25dp"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"
                    android:layout_weight="34"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="#C8102E"
                    android:visibility="visible"
                    android:text="Set"
                    android:clickable="true"
                    android:textColor="@color/white"/>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/settingScreenOutputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

</androidx.constraintlayout.widget.ConstraintLayout>